RESOLVED FIXED220725
Non-unified build fixes, mid January 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=220725
Summary Non-unified build fixes, mid January 2021 edition
Adrian Perez
Reported 2021-01-19 01:21:35 PST
Happy new year 2021! 🎉️
Attachments
Patch (6.71 KB, patch)
2021-01-19 01:41 PST, Adrian Perez
no flags
Adrian Perez
Comment 1 2021-01-19 01:41:28 PST
EWS
Comment 2 2021-01-19 03:38:07 PST
Committed r271599: <https://trac.webkit.org/changeset/271599> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417864 [details].
Radar WebKit Bug Importer
Comment 3 2021-01-19 03:39:12 PST
Note You need to log in before you can comment on or make changes to this bug.